PR #133 の1.21.1向け差分を調整