@@ -1,10 +1,8 @@
 package jp.aquafactory.apprenticecodex.recipe.spellcasterworkbench;
 
 import jp.aquafactory.apprenticecodex.registry.RecipeRegistry;
+import net.minecraft.core.HolderLookup;
 import net.minecraft.core.NonNullList;
-import net.minecraft.core.RegistryAccess;
-import net.minecraft.resources.ResourceLocation;
-import net.minecraft.world.Container;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.crafting.Ingredient;
 import net.minecraft.world.item.crafting.Recipe;
@@ -18,33 +16,30 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
-public final class SpellcasterWorkbenchRecipe implements Recipe<Container> {
+public final class SpellcasterWorkbenchRecipe implements Recipe<SpellcasterWorkbenchRecipeInput> {
     public static final int INPUT_SLOT_COUNT = 3;
 
-    private final ResourceLocation id;
     private final List<SizedIngredient> ingredients;
     private final List<ItemStack> results;
     private final int priority;
 
     public SpellcasterWorkbenchRecipe(
-            ResourceLocation id,
             List<SizedIngredient> ingredients,
             List<ItemStack> results,
             int priority
     ) {
-        this.id = id;
         this.ingredients = sanitizeIngredients(ingredients);
         this.results = sanitizeResults(results);
         this.priority = priority;
     }
 
     @Override
-    public boolean matches(@NotNull Container container, @NotNull Level level) {
-        return findMatchingSlots(container) != null;
+    public boolean matches(@NotNull SpellcasterWorkbenchRecipeInput input, @NotNull Level level) {
+        return findMatchingSlots(input) != null;
     }
 
     @Override
-    public @NotNull ItemStack assemble(@NotNull Container container, @NotNull RegistryAccess registryAccess) {
+    public @NotNull ItemStack assemble(@NotNull SpellcasterWorkbenchRecipeInput input, HolderLookup.Provider registries) {
         return getPrimaryResultTemplate();
     }
 
@@ -54,13 +49,8 @@ public final class SpellcasterWorkbenchRecipe implements Recipe<Container> {
     }
 
     @Override
-    public @NotNull ItemStack getResultItem(@NotNull RegistryAccess registryAccess) {
+    public @NotNull ItemStack getResultItem(HolderLookup.Provider registries) {
         return getPrimaryResultTemplate();
-    }
-
-    @Override
-    public @NotNull ResourceLocation getId() {
-        return id;
     }
 
     @Override
@@ -93,10 +83,7 @@ public final class SpellcasterWorkbenchRecipe implements Recipe<Container> {
     }
 
     public @NotNull ItemStack getPrimaryResultTemplate() {
-        if (results.isEmpty()) {
-            return ItemStack.EMPTY;
-        }
-        return results.get(0).copy();
+        return results.getFirst().copy();
     }
 
     public @NotNull List<ItemStack> getResultTemplates() {
@@ -111,35 +98,40 @@ public final class SpellcasterWorkbenchRecipe implements Recipe<Container> {
         return priority;
     }
 
-    public @Nullable int[] findMatchingSlots(@NotNull Container container) {
-        if (container.getContainerSize() < INPUT_SLOT_COUNT || ingredients.size() != INPUT_SLOT_COUNT) {
+    public @Nullable int[] findMatchingSlots(@NotNull SpellcasterWorkbenchRecipeInput input) {
+        if (input.size() < INPUT_SLOT_COUNT || ingredients.size() != INPUT_SLOT_COUNT) {
             return null;
         }
 
         var usedSlots = new boolean[INPUT_SLOT_COUNT];
         var matchedSlots = new int[INPUT_SLOT_COUNT];
         Arrays.fill(matchedSlots, -1);
-        if (!matchesUnordered(container, 0, usedSlots, matchedSlots)) {
+        if (!matchesUnordered(input, 0, usedSlots, matchedSlots)) {
             return null;
         }
         return matchedSlots;
     }
 
-    private boolean matchesUnordered(Container container, int ingredientIndex, boolean[] usedSlots, int[] matchedSlots) {
+    private boolean matchesUnordered(
+            SpellcasterWorkbenchRecipeInput input,
+            int ingredientIndex,
+            boolean[] usedSlots,
+            int[] matchedSlots
+    ) {
         if (ingredientIndex >= ingredients.size()) {
             return true;
         }
 
         var ingredient = ingredients.get(ingredientIndex);
         for (var slotIndex = 0; slotIndex < INPUT_SLOT_COUNT; ++slotIndex) {
-            var stack = container.getItem(slotIndex);
+            var stack = input.getItem(slotIndex);
             if (usedSlots[slotIndex] || stack.isEmpty() || !ingredient.test(stack)) {
                 continue;
             }
 
             usedSlots[slotIndex] = true;
             matchedSlots[ingredientIndex] = slotIndex;
-            if (matchesUnordered(container, ingredientIndex + 1, usedSlots, matchedSlots)) {
+            if (matchesUnordered(input, ingredientIndex + 1, usedSlots, matchedSlots)) {
                 return true;
             }
             usedSlots[slotIndex] = false;
